fix: GET users endpoint always return find all user bug fixrd